exec_printing_02.txt

h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression # cd libbasarprinting
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting # ls
README.md            file_extension_test  go.sh                interpreter_test     main.cpp             patterns.txt         pdf_conversion_test  print_utils_test     raw_print_test
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting # cd file_extension_test
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting/file_extension_test # ./go.sh
=========================================
  Building file_extension_test
=========================================

rm -f file_extension_test *.o go.out
g++ -g -std=c++17 -maix64 -pthread -I../../../library/include -I../../../../../ext/log4cplus/include -I../../../../../ext/boost/include -o file_extension_test main.cpp -L../../../library/lib/debug -L../../../../../ext/log4cplus/lib/debug -L../../../../../ext/boost/lib -lbasarprinting -lbasarcmnutil -lbasardebug -llog4cplus -lboost_system -lboost_filesystem -maix64 -pthread -Wl,-brtl
ld: 0711-224 WARNING: Duplicate symbol: .__init_aix_libgcc_cxa_atexit
ld: 0711-345 Use the -bloadmap or -bnoquiet option to obtain more information.

Build successful - binary created

=========================================
  Checking linked libraries
=========================================
         ../../../library/lib/debug/libbasarprinting.so
         ../../../library/lib/debug/libbasarcmnutil.so
         ../../../library/lib/debug/libbasardebug.so
         ../../../../../ext/log4cplus/lib/debug/liblog4cplus.so
         ../../../library/lib/debug/libbasarproperty.so
         ../../../library/lib/debug/libbasarlogin.so
         ../../../library/lib/debug/libbasardbsql.so
         ../../../library/lib/debug/libbasardbaspect.so

=========================================
  Running test
=========================================

exec(): 0509-036 Cannot load program ./file_extension_test because of the following errors:
        0509-022 Cannot load module ../../../library/lib/debug/libbasarlogin.so.
        0509-150   Dependent module libldap.so could not be loaded.
        0509-022 Cannot load module libldap.so.
        0509-026 System error: A file or directory in the path name does not exist.
        0509-022 Cannot load module file_extension_test.
        0509-150   Dependent module ../../../library/lib/debug/libbasarlogin.so could not be loaded.

=========================================
  Test exit code: 0
=========================================
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting/file_extension_test # cd ..
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting # ls
README.md            file_extension_test  go.sh                interpreter_test     main.cpp             patterns.txt         pdf_conversion_test  print_utils_test     raw_print_test
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting # cd interpreter_test
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting/interpreter_test # ls
go.sh         main.cpp      makefile      patterns.txt
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting/interpreter_test # ./go.sh
=========================================
  Building interpreter_test
=========================================

rm -f interpreter_test *.o go.out
g++ -g -std=c++17 -maix64 -pthread -I../../../library/include -I../../../../../ext/log4cplus/include -I../../../../../ext/boost/include -o interpreter_test main.cpp -L../../../library/lib/debug -L../../../../../ext/log4cplus/lib/debug -L../../../../../ext/boost/lib -lbasarprinting -lbasarcmnutil -lbasardebug -llog4cplus -lboost_system -lboost_filesystem -maix64 -pthread -Wl,-brtl
main.cpp: In function 'int main(int, char**)':
main.cpp:52:73: error: no matching function for call to 'basar::cmnutil::BasarRuntimeException::BasarRuntimeException(const char [25])'
   52 |                 throw basar::RuntimeException("Empty string not allowed");
      |                                                                         ^
In file included from ../../../library/include/libbasarcmnutil.h:29,
                 from main.cpp:3:
../../../library/include/libbasarcmnutil_exceptions.h:234:49: note: candidate: 'basar::cmnutil::BasarRuntimeException::BasarRuntimeException()'
  234 |                                                 BasarRuntimeException           ();     //!< forbidden
      |                                                 ^~~~~~~~~~~~~~~~~~~~~
../../../library/include/libbasarcmnutil_exceptions.h:234:49: note:   candidate expects 0 arguments, 1 provided
../../../library/include/libbasarcmnutil_exceptions.h:231:33: note: candidate: 'basar::cmnutil::BasarRuntimeException::BasarRuntimeException(const basar::cmnutil::ExceptionInfoStruct&)'
  231 |         LIBBASARCMNUTIL_API     BasarRuntimeException           (const ExceptionInfoStruct& sInfo);
      |                                 ^~~~~~~~~~~~~~~~~~~~~
../../../library/include/libbasarcmnutil_exceptions.h:231:93: note:   no known conversion for argument 1 from 'const char [25]' to 'const basar::cmnutil::ExceptionInfoStruct&'
  231 |         LIBBASARCMNUTIL_API     BasarRuntimeException           (const ExceptionInfoStruct& sInfo);
      |                                                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
../../../library/include/libbasarcmnutil_exceptions.h:227:7: note: candidate: 'basar::cmnutil::BasarRuntimeException::BasarRuntimeException(const basar::cmnutil::BasarRuntimeException&)'
  227 | class BasarRuntimeException : public BasarException
      |       ^~~~~~~~~~~~~~~~~~~~~
../../../library/include/libbasarcmnutil_exceptions.h:227:7: note:   no known conversion for argument 1 from 'const char [25]' to 'const basar::cmnutil::BasarRuntimeException&'
../../../library/include/libbasarcmnutil_exceptions.h:227:7: note: candidate: 'basar::cmnutil::BasarRuntimeException::BasarRuntimeException(basar::cmnutil::BasarRuntimeException&&)'
../../../library/include/libbasarcmnutil_exceptions.h:227:7: note:   no known conversion for argument 1 from 'const char [25]' to 'basar::cmnutil::BasarRuntimeException&&'
make: *** [makefile:35: interpreter_test] Error 1

ERROR: Build failed - executable not created
h.benabdelaziz@znbs21:/software/home/benabdelaziz/basar_continuous01/pharmos.base.basar/dev/src/basar/regression/libbasarprinting/interpreter_test #